--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
 	<meta charset="UTF-8">
-	<title>My first Page</title>
+	<title>My first Page -  push to github</title>
   </head>
   <body>
 	<nav></nav>
